ulkoasun ja toiminnallisuuksien parantelua

--- a/templates/createprograml.html
+++ b/templates/createprograml.html
@@ -1,10 +1,11 @@
-<form action"/createuser" method="POST">
+<form action="/createprogram" method="POST" enctype="multipart/form-data">
 <p>Ohjelman otsikko:<br>
 <input type="text" name="headline"></p>
 <p>Ohjelman kuvaus:<br>
-<textarea name:"content" rows="5", cols="50"></textarea>
-<p>Käyttäjän id:<br>
-<input type="text" name="userid"></p>
+<textarea name="content" rows="5", cols="50"></textarea></p>
+<p>Kuva:<br>
+<input type="file" name="file">
 <input type="submit" value="Luo ohjelma">
 <a href="/login">Etusivulle</a>
 </form>
+
