--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,24 @@
+<!DOCTYPE html>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+<body>
+<div class="headline">
+  <h1> Kuntokerroin </h1>
+</div>
+
+  <h2> Luo tunnus sovellukseen</h2>
+  <p> Syötä käyttäjätunnus ja salasana</p>
 <form action="/signup" method="POST">
 <p>Tunnus:<br>
 <input type="text" name="username"></p>
 <p>Salasana:<br>
 <input type="password" name="password"></p>
-<input type="submit" value="Luo tunnus">
+<input type="submit" value="Luo tunnus"></p>
 <a href="/">Takaisin etusivulle</a>
 </form>
+
+</body>
+
+
+
