--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+<body>
+<div class="headline">   
+  <h1> Kuntokerroin </h1>
+</div>
+  <h2> Tervetuloa sovellukseen </h2>
+  <p> Kirjaudu sisään tai luo käyttäjä</p>
 <form action="/login" method="POST">
 <p>Tunnus:<br>
 <input type="text" name="username"></p>
@@ -7,3 +17,4 @@
 <a href="/signup">Luo tunnus</a>
 </form>
 
+</body>
