--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<meta name='viewport' content='width=device-width, initial-scale=1'>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
 
-<body>
-<div class="headline">   
-  <h1> Kuntokerroin </h1>
-</div>
-  <h2> Tervetuloa sovellukseen </h2>
-  <p> Kirjaudu sisään tai luo käyttäjä</p>
-<form action="/login" method="POST" onsubmit="return check(this)">
-<p>Tunnus:<br>
-<input type="text" name="username"></p>
-<p>Salasana:<br>
-<input type="password" name="password"></p>
-<input type="submit" value="Kirjaudu">
-<a href="/signup">Luo tunnus</a>
-</form>
+  <body>
+    <div class="container">
+     <div class="row">
+      <div class="headline">   
+      <h1> Kuntokerroin </h1>
+      </div>
+     <div class="col align-self-center">
+      <div class= "h-100 p-5 text-white bg-dark rounded-3">
+       <h2> Tervetuloa sovellukseen </h2>
+       <p> Kirjaudu sisään tai luo käyttäjä</p>
+       <form action="/login" method="POST" onsubmit="return check(this)">
+       <p>Tunnus:<br>
+       <input type="text" name="username"></p>
+       <p>Salasana:<br>
+       <input type="password" name="password"></p>
+       <input type="submit" value="Kirjaudu">
+       <button type="button" class"btn btn-link">
+       <a href="/signup">Luo tunnus</a></button>
+      </div>
+     </div>
+    </div>
+  </div>
+  </form>
+  </body>
+</html>
 
 <script>
 function check(form) {
@@ -31,4 +46,3 @@ function check(form) {
 }
 </script>
 
-</body>
