--- a/templates/usermenu.html
+++ b/templates/usermenu.html
@@ -1,12 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
+<body>
 {% if session.username %}
-<title> Kuntokerroin - {% block title %}{% endblock %} </title>
-<p>Tervetuloa  {{ session.username }} !</p>
-
-Omat ohjelmasi: {{ count }}
-<hr>
-{% for program in programs %}
-<a href="/program/{{ program[0] }}"> {{ program[1] }} </a>
-<hr>
-{% endfor %}
-<a href="/logout">Kirjaudu ulos</a>
+<div class="container">
+  <div class="row">
+    <title> Kuntokerroin - {% block title %}{% endblock %} </title>
+    <div class="col">  
+    <h2>Tervetuloa  {{ session.username }} !</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+     Omat ohjelmasi: {{ count }}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <form action="/usermenu" method="POST">
+      {% for program in programs %}
+      <button type="button" class"btn btn-link"> 
+      <a href="/usersprogram/{{ program[0] }}">{{ program[1] }}</a></button>
+      {% endfor %}
+      </form>
+    </div>
+  </div>
+  <div class"row">
+   <div class="col">
+   <a href="/logout">Kirjaudu ulos</a>
+   </div>
+  </div>
+</div>  
 {% endif %}
+</body>
+</html>
