Ohjelman muokkaus ja piilotusominaisuus lisatty

--- a/templates/adminmenu.html
+++ b/templates/adminmenu.html
@@ -9,6 +9,7 @@ Kaikki ohjelmat: {{ count }}
 <a href="/program/{{ program[0] }}"> {{ program[1] }} </a>
 <hr>
 {% endfor %}
+<a href="/editprogram">Muokkaa ohjelmia</a>
 <a href="/createprogram">Luo uusi ohjelma</a>
 <a href="/logout">Kirjaudu ulos</a>
 {% endif %}
