ohjelman lisayksen tarkistus ja uudelleenohjaus

--- a/templates/createprograml.html
+++ b/templates/createprograml.html
@@ -33,6 +33,18 @@ function check(form) {
         alert("Kuvauksen tulee olla 10-10000 merkkiä pitkä");
         return false;
     }
+/*    if (!Number.isInteger(Number(form.reps.value))) {
+        alert("Toistojen tulee olla numeroita");
+        return false;
+    }
+    if (!Number.isInteger(Number(form.sets.value))) {
+        alert("Sarjojen tulee olla numeroita");
+        return false;
+    }
+    if (!Number.isInteger(Number(form.times.value))) {
+        alert("Treenikertojen tulee olla numeroita");
+        return false;
+    }*/
     if (form.reps.value  > 50 || form.reps.value < 1) {
         alert("Toistojen määrä tulee olla välillä 1-50");
         return false;
