--- a/templates/adminmenu.html
+++ b/templates/adminmenu.html
@@ -1,19 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
+<body>
 {% if session.username %}
 <title> Kuntokerroin - {% block title %}{% endblock %} </title>
-<p>Tervetuloa  {{ session.username }} !</p>
-
-Kaikki ohjelmat: {{ count }}
+<div class="container">
+<div class="row justify-content-center">
+<h2>Tervetuloa  {{ session.username }} !</h2>
+<div class="col">
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th schope="col"> Kaikki ohjelmat: {{ count }}</th>
+    </tr>
+  </thead>
+  <tbody>
+   <tr>
+   <th scope="row">
 <hr>
 {% for program in programs %}
-<a href="/program/{{ program[0] }}"> {{ program[1] }} </a>
+<a href="/program/{{ program[0] }}" class="link-danger"> {{ program[1] }} </a>
 <hr>
 {% endfor %}
-<a href="/editprogram">Muokkaa ohjelmia</a>
-<a href="/createprogram">Luo uusi ohjelma</a>
-<a href="/logout">Kirjaudu ulos</a>
+   </th>
+  </tr>
+ </tbody>
+</table>
+</div>
+</div>
+<button type="button" class="btn btn-outline-danger">
+<a href="/createprogram" class="link-danger">Luo uusi ohjelma</a></button>
+<button type="button" class="btn btn-outline-danger">
+<a href="/editprogram" class="link-danger">Muokkaa ohjelmia</a></button>
+<button type="button" class="btn btn-outline-danger">
+<a href="/logout"class="link-danger">Kirjaudu ulos</a></button>
 {% endif %}
-
+</div>
+</body>
+</html>
 
 
 
