--- a/templates/createprograml.html
+++ b/templates/createprograml.html
@@ -1,3 +1,22 @@
+
+<!DOCTYPE html> 
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
+<body>  
+<div class="container">
+  <div class="row justify-content-center">
+  <h1> Tee uusi ohjelma: </h2>
+  <hr>
+  </div>
+ <div class="row justify-content-center">
+  <div class="h-100 p-5 bg-dark rounded-3">
+  <div class="col">
+     <div class="h-200 p-2 bg-light rounded-3">
+     <div class="col">
 <form action="/createprogram" method="POST" enctype="multipart/form-data" onsubmit="return check(this)">
 <p>Ohjelman otsikko:<br>
 <input type="text" name="headline"></p>
@@ -19,9 +38,19 @@
 <p>Kuva:<br>
 <input type="file" name="file">
 <input type="submit" value="Luo ohjelma">
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="row justify-content-center">
 <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 <a href="/login">Etusivulle</a>
+</div>
+</div>
 </form>
+</body>
+</html>
 
 <script>
 function check(form) {
