--- a/templates/program.html
+++ b/templates/program.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  </head>
+<body>
+<div class="container">
+  <div class="row justify-content-center">
+  <div class="h-100 p-5 bg-dark rounded-3">
+  <div class="col">
+     <div class="h-200 p-2 bg-light rounded-3">
+     <div class="col">
 {% if session.username %}
 <h2>{{ headline }}</h2>
 <hr>
@@ -7,3 +21,11 @@
 <hr>
 <a href="/login">Takaisin</a>
 {% endif %}
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</body>
+</html>
